fix: spacing on nav heading and card buttons

--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -57,8 +57,8 @@ img {
 
 mat-card-actions {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 90%;
+  width: 300px;
   color: #f5f5f5;
 }
