--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -14,9 +14,10 @@ mat-toolbar {
 }
 
 .navbar-brand {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: bold;
   color: $mfwhite;
+  margin-left: 20px;
 }
 
 .navbar {
